# GUI

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  RELEASE_PREPARATION_SUMMARY.md  SECURITY.md  pyproject.toml
.githooks/: pre-commit
AI_IDE_v1756/: __init__.py
AI_IDE_v1756/AI_IDE_v1756/: .env  .env.example  KOPIE_chat_completion.py  RAG_REFERENCE.md  TEST_REPORT.md  WORKFLOW_FIXES.md  __init__.py  ai_ide_v1756.py  db.example.json  dispatcher_doc_db.json  history.json  sessions.db-wal  test_tools_loading.py
AI_IDE_v1756/AI_IDE_v1756/AppData/: README.md  dispatcher_doc_db.json  tree_data.json
AI_IDE_v1756/AI_IDE_v1756/ai_ide/: .gitignore  AI_IDE_v1756.code-workspace  COVER_LETTER_GENERATOR_PROMPT.py  (+40 more)
AI_IDE_v1756/AppData/: dispatcher_doc_db.json
AI_IDE_v1756/_Comments/: AI_Instructs..md  AI_comments copy.md  AI_instructs..md  Layout.md  Layout_1.md  Sketch
AI_IDE_v1756/__pycache__/: debug_file_3.txt  docwrap._test.py
ALDE/: __init__.py
ALDE/ALDE/: WORKFLOW_FIXES.md  __init__.py  ai_ide_v1756.py  get_path.py  jstree_widget.py  test_tools_loading.py  torch_init.py
GUI/AI_IDE_v1756/: .env  KOPIE_chat_completion.py  REPO_ANALYSE_RAG_APPLIED_AI_DEEPDIVE.md  WORKFLOW_FIXES.md  ai_ide_v1756.py  counter.py  get_path.py  history copy.json  jstree_widget.py  lambda_function.py  sessions.db-shm  torch_init.py
GUI/_Comments/: AI_IDE_Code_&_Comments  AI_IDE_Code_&_Comments.py  AI_Instructs. copy.md  AI_comments.md
GUI/__pycache__/: debug_file.py
scripts/: bootstrap_local_state.py  check_history_for_secrets.sh  cleanup_git_history.sh  install-hooks.sh
(+124 files in other folders)
