[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-ide-v1756"
version = "0.0.0"
description = "AI_IDE_v1756 packaged for local imports"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["AI_IDE_v1756*"]
